# androidBreakpad

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/suyf/androidbreakpad/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/suyf/androidbreakpad/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/suyf/androidbreakpad/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libbreakpad/: build.gradle
libbreakpad/src/androidTest/java/com/suyf/libbreadpad/: ExampleInstrumentedTest.java
libbreakpad/src/main/: AndroidManifest.xml
libbreakpad/src/main/cpp/: CMakeLists.txt  native-lib.cpp
libbreakpad/src/main/cpp/breakpad/client/linux/handler/: exception_handler.cc
libbreakpad/src/main/cpp/utils/: log_utils.h
libbreakpad/src/main/java/com/suyf/libbreakpad/: TestBreakPad.java  TestJavaCrash.java
libbreakpad/src/main/res/values/: strings.xml
libbreakpad/src/test/java/com/suyf/libbreadpad/: ExampleUnitTest.java
